product detail page

--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -10,10 +10,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
     <link rel="stylesheet" href="css/app.min.css" />
     <link rel="stylesheet" href="css/responsive.min.css" />
-    <link rel="stylesheet" href="css/swiper.min.3.css" />
+    <!-- <link rel="stylesheet" href="css/swiper.min.3.css" /> -->
+    <!-- <link rel="stylesheet" href="css/zSlider.css" /> -->
     <!-- inject:js -->
     <script src="js/app.min.js"></script>
-    <script src="lib/swiper-3.3.0.min.js"></script>
+    <!-- <script src="lib/zSlider.js"></script> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="lib/swiper-3.3.0.min.js"></script> -->
     <script>
       // if('serviceWorker' in navigator) {
       //   navigator.serviceWorker.register('/sw.js')
@@ -62,5 +65,5 @@
 
     <div ui-yield-to="modals"></div>
   </body>
-  <script src="lib/mobile-product-slider.js"></script>
+  <!-- <script src="lib/mobile-product-slider.js"></script> -->
 </html>
