slider product detail

--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -11,10 +11,9 @@
     <link rel="stylesheet" href="css/app.min.css" />
     <link rel="stylesheet" href="css/responsive.min.css" />
     <!-- <link rel="stylesheet" href="css/swiper.min.3.css" /> -->
-    <!-- <link rel="stylesheet" href="css/zSlider.css" /> -->
+    <link rel="stylesheet" href="css/zSlider.css" />
     <!-- inject:js -->
     <script src="js/app.min.js"></script>
-    <!-- <script src="lib/zSlider.js"></script> -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="lib/swiper-3.3.0.min.js"></script> -->
     <script>
@@ -65,5 +64,6 @@
 
     <div ui-yield-to="modals"></div>
   </body>
-  <!-- <script src="lib/mobile-product-slider.js"></script> -->
+  <script src="lib/zSlider.js"></script>
+  <script src="lib/mobile-product-slider.js"></script>
 </html>
