use controller for init slider

--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -71,5 +71,5 @@
     <div ui-yield-to="modals"></div>
   </body>
   <script src="lib/zSlider.js"></script>
-  <script src="lib/mobile-product-slider.js"></script>
+  <!-- <script src="lib/mobile-product-slider.js"></script> -->
 </html>
