--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -17,12 +17,12 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="lib/swiper-3.3.0.min.js"></script> -->
     <script>
-      // if('serviceWorker' in navigator) {
-      //   navigator.serviceWorker.register('/sw.js')
-      //     .then(function(){
-      //       console.log('registerded');
-      //     });
-      // }
+      if('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js')
+          .then(function(){
+            console.log('registerded');
+          });
+      }
     </script>
   </head>
   <body ng-app="Up+" ng-controller="MainController">
