--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -19,7 +19,7 @@
     <script src="lib/swiper-3.3.0.min.js"></script> -->
     <script>
     //if('serviceWorker' in navigator) {
-    if(false) {
+    if(true) {
       navigator.serviceWorker.register('/sw.js')
       .then(function(reg){
         reg.pushManager.subscribe({
