--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -13,49 +13,51 @@
     <link rel="stylesheet" href="css/responsive.min.css" />
     <!-- <link rel="stylesheet" href="css/swiper.min.3.css" /> -->
     <link rel="stylesheet" href="css/zSlider.css" />
+    <link rel="stylesheet" href="css/introjs.css" />
     <!-- inject:js -->
+    <!-- <script src="lib/intro.js"></script>
+    <script src="lib/angular-intro.js"></script> -->
     <script src="js/app.min.js"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="lib/swiper-3.3.0.min.js"></script> -->
     <script>
-    //if('serviceWorker' in navigator) {
-    if(false) {
-      navigator.serviceWorker.register('/sw.js')
-      .then(function(reg){
-        reg.pushManager.subscribe({
-          userVisibleOnly: true
-        }).then(function(sub) {
-          console.log('endpoint:', sub.endpoint);
-        });
-      });
-    }
+    // if('serviceWorker' in navigator) {
+    // navigator.serviceWorker.register('/sw.js')
+    //   .then(function(reg){
+    //     reg.pushManager.subscribe({
+    //       userVisibleOnly: true
+    //     }).then(function(sub) {
+    //       console.log('endpoint:', sub.endpoint);
+    //     });
+    //   });
+    // }
     </script>
     
   </head>
-  <body ng-app="Up+" ng-controller="MainController">
+  <body ng-app="Up+" ng-controller="MainController" main-directive>
 
     <!-- Sidebars -->
-    <div ng-include="'sidebar.html'"
+    <!-- <div ng-include="'sidebar.html'"
             ui-track-as-search-param='true'
-            class="sidebar sidebar-left"></div>
+            class="sidebar sidebar-left"></div> -->
 
     <div class="app">
 
       <!-- Navbars -->
 
-      <div class="navbar navbar-app navbar-absolute-top">
+      <div class="navbar navbar-app navbar-absolute-top bg-green-42">
         <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
-          Up+
+          <div class="topbar-logo-wrapper"><a href="#/">Up+</a></div>
         </div>
-        <div class="btn-group pull-left">
+        <!-- <div class="btn-group pull-left">
           <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
             <i class="fa fa-bars"></i> Menu
           </div>
-        </div>
+        </div> -->
       </div>
 
       <div class="navbar navbar-app navbar-absolute-bottom">
-        <div class="btn-group justified">
+        <div id="add-product" class="btn-group justified">
           <a href="#/upload" class="btn btn-navbar">Add Product</a>
         </div>
       </div>
@@ -72,5 +74,4 @@
     <div ui-yield-to="modals"></div>
   </body>
   <script src="lib/zSlider.js"></script>
-  <!-- <script src="lib/mobile-product-slider.js"></script> -->
 </html>
