--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -19,9 +19,9 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="lib/swiper-3.3.0.min.js"></script> -->
     <script>
-    // if('serviceWorker' in navigator) {
+    if('serviceWorker' in navigator) {
       
-   if(false) {
+   // if(false) {
       navigator.serviceWorker.register('/sw.js')
       .then(function(reg){
         reg.pushManager.subscribe({
