--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
     <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/app.min.css" />
     <link rel="stylesheet" href="css/responsive.min.css" />
     <!-- <link rel="stylesheet" href="css/swiper.min.3.css" /> -->
@@ -17,13 +18,18 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="lib/swiper-3.3.0.min.js"></script> -->
     <script>
-      if('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js')
-          .then(function(){
-            console.log('registerded');
-          });
-      }
+    if('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/sw.js')
+      .then(function(reg){
+        reg.pushManager.subscribe({
+          userVisibleOnly: true
+        }).then(function(sub) {
+          console.log('endpoint:', sub.endpoint);
+        });
+      });
+    }
     </script>
+    
   </head>
   <body ng-app="Up+" ng-controller="MainController">
 
