--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -48,7 +48,7 @@
 
       <!-- Navbars -->
 
-      <div id="navbar" class="navbar navbar-app navbar-absolute-top bg-green-42">
+      <div id="navbar" class="navbar navbar-app navbar-absolute-top {{bgStatusOnline}}">
         <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
           <div class="topbar-logo-wrapper"><a href="#/">Up+</a></div>
         </div>
