hide add button in add product page

--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -60,7 +60,7 @@
       </div>
 
       <div class="navbar navbar-app navbar-absolute-bottom">
-        <div id="add-product" class="btn-group justified">
+        <div ng-show="disableBtnAddProduct != 1" id="add-product" class="btn-group justified">
           <a href="#/upload" class="btn btn-navbar">Add Product</a>
         </div>
       </div>
