swap menu header

--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -61,13 +61,13 @@
       <!-- Navbars -->
 
       <div id="navbar" class="navbar navbar-app navbar-absolute-top {{bgStatusOnline}}" style="width:100%">
-        <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
+        <div class="navbar-brand navbar-brand-left" ui-yield-to="title">
           <div class="topbar-logo-wrapper">
              <a href="#/">Up+</a> 
           </div>
 
         </div>
-        <div class="navbar-brand navbar-brand-center" ui-yield-to="title" style="text-align:left">
+        <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
 <div class="topbar-logo-wrapper">
              <a onclick="window.location.reload()">Refresh</a>
           </div>
