--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -84,13 +84,15 @@
     window.addEventListener('load', function() {
       function updateOnlineStatus(event) {
         var condition = navigator.onLine ? "online" : "offline";
-
+        
         if(condition == "offline") {
+          isOnline = false;
           var toast = new iqwerty.toast.Toast();
           toast.setText('You are Offline').setDuration(3000).show();
           document.getElementById("navbar").className = "navbar navbar-app navbar-absolute-top bg-offline";
         }
         if(condition == "online") {
+          isOnline = true;
           document.getElementById("navbar").className = "navbar navbar-app navbar-absolute-top bg-green-42";
         }
       }
