--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -10,6 +10,19 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="yes" />
     <link rel="manifest" href="manifest.json">
     <link rel="icon" sizes="192x192" href="images/launcher-icon-4x.png">
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Tokopedia">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+    <!-- Theme color for chrome, firefox and opera-->
+    <meta name="theme-color" content="#42b549" />
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#42b549">
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <meta name="HandheldFriendly" content="true" />
     <link rel="stylesheet" href="css/app.min.css" />
     <link rel="stylesheet" href="css/responsive.min.css" />
     <!-- <link rel="stylesheet" href="css/swiper.min.3.css" /> -->
@@ -38,7 +51,6 @@
     <input type="hidden" value="" name="pushEndpoint"/>
   </head>
   <body ng-app="Up+" ng-controller="MainController">
-
     <!-- Sidebars -->
     <!-- <div ng-include="'sidebar.html'"
             ui-track-as-search-param='true'
@@ -48,15 +60,19 @@
 
       <!-- Navbars -->
 
-      <div id="navbar" class="navbar navbar-app navbar-absolute-top {{bgStatusOnline}}">
+      <div id="navbar" class="navbar navbar-app navbar-absolute-top {{bgStatusOnline}}" style="width:100%">
         <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
-          <div class="topbar-logo-wrapper"><a href="#/">Up+</a></div>
-        </div>
-        <!-- <div class="btn-group pull-left">
-          <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
-            <i class="fa fa-bars"></i> Menu
+          <div class="topbar-logo-wrapper">
+             <a href="#/">Up+</a> 
           </div>
-        </div> -->
+
+        </div>
+        <div class="navbar-brand navbar-brand-center" ui-yield-to="title" style="text-align:left">
+<div class="topbar-logo-wrapper">
+             <a onclick="window.location.reload()">Refresh</a>
+          </div>
+
+        </div>
       </div>
 
       <div class="navbar navbar-app navbar-absolute-bottom">
